tests/baselines/reference/parserErrorRecovery_ObjectLiteral1.errors.txt
parserErrorRecovery_ObjectLiteral1.ts(1,16): error TS1005: ',' expected.


==== parserErrorRecovery_ObjectLiteral1.ts (1 errors) ====
    var v = { a: 1 b: 2 }
                   ~
!!! error TS1005: ',' expected.